--- a/src/app/features/home/components/contact-component/contact-component.html
+++ b/src/app/features/home/components/contact-component/contact-component.html
@@ -20,27 +20,31 @@
         </div>
         <div class="content"> 
             <div class="card-wrapper">
-                <div class="card card-left">
-                    <div class="card-image">
-                        <img src="https://mir-s3-cdn-cf.behance.net/projects/404/a6934b228623591.Y3JvcCwyMTE0LDE2NTQsMTk4LDA.png" alt="Modern Real Estate Development" loading="lazy">
-                        <div class="feature-tag">Insight</div>
-                    </div>
-                    <div class="card-content">
-                        <p class="card-title">Real Estate Innovations: Pioneering The Future</p>
-                        <div class="card-date">April 30, 2025</div>
-                        
+                <div class="card-container">
+                    <div class="card card-left">
+                        <div class="card-image">
+                            <img src="https://mir-s3-cdn-cf.behance.net/projects/404/a6934b228623591.Y3JvcCwyMTE0LDE2NTQsMTk4LDA.png" alt="Modern Real Estate Development" loading="lazy">
+                            <div class="feature-tag">Insight</div>
+                        </div>
+                        <div class="card-content">
+                            <p class="card-title">Real Estate Innovations: Pioneering The Future</p>
+                            <div class="card-date">April 30, 2025</div>
+                            
+                        </div>
                     </div>
                 </div>
 
-                <div class="card card-right">
-                    <div class="card-image">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBn7UYE3e6uBGhQzO7424lGROD-H4_GVCzzo0hBoFLYNRM-fXUUgdwlN5wZhL1qn-P2y4&usqp=CAU" alt="Investment Opportunities" loading="lazy">
-                        <div class="feature-tag">Trends</div>
-                    </div>
-                    <div class="card-content">
-                        <p class="card-title">Real Estate Market Trends: Promising Growth</p>
-                        <div class="card-date">April 30, 2025</div>
-                        
+                <div class="card-container">
+                    <div class="card card-right">
+                        <div class="card-image">
+                            <img src="https://archello.s3.eu-central-1.amazonaws.com/images/2020/01/16/Modern-Arabic-Villa-Architectural-Design-1.1579168023.1665.jpg" alt="Investment Opportunities" loading="lazy">
+                            <div class="feature-tag">Trends</div>
+                        </div>
+                        <div class="card-content">
+                            <p class="card-title">Real Estate Market Trends: Promising Growth</p>
+                            <div class="card-date">April 30, 2025</div>
+                            
+                        </div>
                     </div>
                 </div>
             </div>
